syntax = "proto3";

package token_transfer;
option go_package = "github.com/stellar/go/protos/processors/token_transfer;token_transfer";

import "google/protobuf/timestamp.proto";

import "address/address.proto";
import "asset/asset.proto";

// EventMeta message
message EventMeta {
  uint32 ledgerSequence = 1;
  google.protobuf.Timestamp closedAt = 2;
  optional uint32 operationIndex = 3; // Optional for fee events or smart contract transactions
  string txHash = 4;                  // Stellar transaction hash
}

message Transfer {
  address.Address from = 1;
  address.Address to = 2;
  string amount = 3;
}

message Mint {
  address.Address to = 1;
  string amount = 2;
}

message Burn {
  address.Address from = 1;
  string amount = 2;
}

message Clawback {
  address.Address from = 1;
  string amount = 3;
}

message Fee {
  address.Address from = 1;
  string amount = 2;
}

// TokenTransferEvent message
message TokenTransferEvent {
  EventMeta meta = 1;
  optional asset.Asset asset = 2; // Asset can be native or issued, marked optional for SEP-41 custom tokens
  oneof event {
    Transfer transfer = 3;
    Mint mint = 4;
    Burn burn = 5;
    Clawback clawback = 6;
    Fee fee = 7;
  }
}

